whoami-destination-rule.yaml
# whoami-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: whoami
  namespace: test
spec:
  host: whoami
  trafficPolicy:
    loadBalancer:
      simple: CUSTOMIZED
